:sparkles: MDAS-674 Add rest resource.
